# CppLLMTranslate

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  chang_pot.txt
GUI/lvgl/: .clang-format  .gitignore  CMakeLists.txt  Makefile  lv_conf.h
GUI/qt/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  ConfigManager.cpp  ConfigManager.h  CustomTabStyle.h  FileManager.cpp  FileManager.h  FileTranslation_page.cpp  FileTranslation_page.h  HttpManager.cpp  HttpManager.h  MessageManager.cpp  MessageManager.h  ModelsInfo.cpp  ModelsInfo.h  StateManager.cpp  StateManager.h  ThreadSafeString.cpp  ThreadSafeString.h  UDP_Client.cpp  UDP_Client.h  agreement.cpp  agreement.h  cJSON.cpp  intricate_page.cpp  intricate_page.h  main.cpp  mainwindow.cpp  mainwindow.h  simple_page.cpp  simple_page.h  start_page.cpp  start_page.h
Server/: 0_启动运行环境.bat  1_编译.bat  1_编译_cpu.bat  1_编译_cpu_再次编译.bat  1_编译_gpu.bat  1_编译_gpu_再次编译.bat  2_Server_cpu.bat  2_Server_gpu.bat  6_聊天.bat
Server/llama.cpp/: .gitignore  1_编译.bat  1_编译_cpu_再次编译.bat  1_编译_gpu_再次编译.bat  2_Server_gpu.bat  2_翻译.bat  2_翻译_gpu.bat  2_预处理.bat  2_预处理_gpu.bat  3_拷贝翻译.bat  3_拷贝翻译_gpu.bat  3_预处理_翻译.bat  6_聊天.bat  7_删除翻译文件.bat  README_Anaconda环境搭建.md  README_llama_cpp_zh.md  run.sh  常用指令.txt  量化模型.md
Server/llama.cpp/examples/CppLLMTranslateServer/: CMakeLists.txt  LLM_main.cpp  LLM_main.h  MessageManager.cpp  MessageManager.h  TranslationManager.cpp  TranslationManager.h  UDP_Server.cpp  UDP_Server.h  agreement.cpp  agreement.h  main.cpp
Server/llama.cpp/examples/fxxk_datasheet_llama_cpp/: CMakeLists.txt  README_zh.md  TranslationManager.h  hellp.md  main.cpp
Server/llama.cpp/examples/fxxk_datasheet_llama_cpp/preprocessor_code/: 0_启动运行环境.bat  FilesRecursive.cpp  PyMuPDF.md  del_input_txt.py  file_cpy.cpp  markdown_cut.cpp  pdf_read_write.py  pdf_read_write_1.py  pdf_to_txt_2.py  python打包成exe.md
Server/prompts/: chat_prefix_chat.txt  chat_prefix_hpp_llama.txt  chat_prefix_md.txt  chat_prefix_md_llama.txt  chat_prefix_rst_llama.txt  chat_suffix_chat.txt  chat_suffix_md.txt  chat_suffix_rst.txt  nice_input_chat.txt  nice_input_hpp.txt  nice_input_rst_1.txt  nice_input_rst_2.txt  nice_input_rst_3.txt  nice_output_chat.txt  nice_output_hpp.txt  nice_output_md.txt  nice_output_rst_1.txt  nice_output_rst_2.txt  nice_output_rst_3.txt  (+5 more)
(+154 files in other folders)
